# dmad-on-django

./: MANIFEST.in  README.md  pyproject.toml
dmad_on_django/: admin.py  models.py
