[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmad-on-django"
version = "0.0.1"
dependencies = [
	"django>=5.1",
	"iso639",
	"pylobid"
]
description = "The Dresden Module for Authority Data Management rebuilt on Django"
readme = "README.md"
requires-python = ">=3.9"
authors = [
	{ name = "Matthias Richter", email = "matthias.richter@slub-dresden.de" }
]
license = {file = "LICENSE"}
classifiers = [
	"Development Status :: 3 - Alpha",
	"Framework :: Django",
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
	"Environment :: Web Environment",
]
